# create-article-p

./: .env_example  README.md  app.py  article.md  graph.py  pyproject.toml  requirements.txt
prompts/: diagram.txt  draft_human.txt  draft_system.txt  fact_check.txt  revise_sections.txt  split_sections.txt  title.txt
static/: app.js
templates/: index.html
