[project]
name = "create-article-p"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "eventlet>=0.40.4",
    "flask>=3.1.2",
    "flask-socketio>=5.6.0",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "openai>=2.14.0",
    "tiktoken>=0.12.0",
]
